Necessary buttons adde. Button.css file created and modified for buttons and Calculator.js file created for hiding and calculating buttons

--- a/RazorPage/Pages/TryPage.cshtml
+++ b/RazorPage/Pages/TryPage.cshtml
@@ -2,6 +2,7 @@
 @model MyApp.Namespace.TryPageModel
 @{
 }
+<link rel="stylesheet" href="~/css/button.css">
 <main>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
@@ -19,7 +20,7 @@
             </ul>
             <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
           </div>
-        </div>
+        </div>  
       </div>
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
@@ -56,60 +57,19 @@
         </div>
       </div>
     </div>
-
-    <h2 class="display-6 text-center mb-4">Compare plans</h2>
-
-    <div class="table-responsive">
-      <table class="table text-center">
-        <thead>
-          <tr>
-            <th style="width: 34%;"></th>
-            <th style="width: 22%;">Free</th>
-            <th style="width: 22%;">Pro</th>
-            <th style="width: 22%;">Enterprise</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row" class="text-start">Public</th>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-start">Private</th>
-            <td></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-        </tbody>
-
-        <tbody>
-          <tr>
-            <th scope="row" class="text-start">Permissions</th>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-start">Sharing</th>
-            <td></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-start">Unlimited members</th>
-            <td></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-          <tr>
-            <th scope="row" class="text-start">Extra security</th>
-            <td></td>
-            <td></td>
-            <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <script src="~/js/calculator.js"></script>
+    
+      <button type="submit" class="hide-button" onclick="ButtonFunc()">Press for addition form</button> <br><br>
+  
+  <div id="selam">
+    <h2>Addition Form</h2><br>
+    <form>
+      <label for="fnum">First Number:</label><br>
+      <input type="number" id="fnum" name="fnum"><br><br>
+      <label for="snum">Second Number:</label><br>
+      <input type="number" id="snum" name="snum"><br><br>
+      <button type="button" class="calculate-button" onclick="getSum()" id="sonuc">Calculate Sum</button><br>
+    </form>
+    <span class="result-Box" id="ans" style="display: none;"></span>
+  </div>
   </main>
